# Parallelisme

./: README.md
devoir/exercice1/: Lisezmoi.txt
devoir/exercice1/src/include/: Count.hpp  Found_N_Length_Subset.hpp  Longest_Subset.hpp
devoir/exercice2/: Lisezmoi.txt
devoir/exercice2/src/: main.cpp
devoir/exercice3/: CMakeLists.txt
devoir/exercice3/src/include/: ParallelRecursiveMerge.hpp
devoir/exercice4/: CMakeLists.txt
devoir/exercice4/src/: pearson.cpp
devoir/exercice5/: CMakeLists.txt  Lisezmoi.txt
devoir/exercice5/src/include/: ParallelStableMerge.hpp
distributed-parallel-programming-main/devoir/: README.md
distributed-parallel-programming-main/devoir/exercice1/: CMakeLists.txt
distributed-parallel-programming-main/devoir/exercice1/src/: main.cpp
distributed-parallel-programming-main/devoir/exercice2/: CMakeLists.txt
distributed-parallel-programming-main/devoir/exercice2/src/include/: ParallelRecursiveMerge.hpp
distributed-parallel-programming-main/devoir/exercice3/src/: Metrics.cpp
distributed-parallel-programming-main/devoir/exercice3/src/include/: Metrics.hpp
distributed-parallel-programming-main/devoir/exercice5/src/: testParallelStableMerge.cpp
